2003-22-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataRelationTest.cs: More tests and little clean up.
	
2003-14-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataRelationTest.cs: Added more tests
	
2003-13-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataRelationTest.cs: Test class for DataRelation
	
2002-12-26  Ville Palo <vi64pa@koti.soon.fi>

	* own_schema.xsd: XmlSchema for testing ReadXmlSchema() -method
	* DataSetTest.cs: Added more Xml-tests.	
	
2002-12-17  Ville Palo <vi64pa@koti.soon.fi>

	* region.xml: 
	* store.xsd: new xmldoment and xmlschema for testing DataSet
	* DataSetTest.cs: Added some Xml-tests.
	* AllTests.cs: Added DataSetTest
	
2002-10-23  Nick Drochak  <ndrochak@gol.com>

	* ConstraintCollectionTest.cs (SetUp): Clear the constraints before 
	each test.
	* ConstraintTest.cs: same
	* DataColumnTest.cs: Get exceptions straight.  Some are thrown and some
	aren't

2002-10-22  Nick Drochak  <ndrochak@gol.com>

	* DataColumnTest.cs: Remove compiler warnings and use caught exception
	to report useful info.